[tool.poetry]
name = "sample_dataframe"
version = "0.1.0"
description = "Sample Dataframe of Spark and Polars"
authors = ["Tam Nguyen <npt.dc@outlook.com"]

[tool.poetry.dependencies]
python = "^3.11.4, <3.12"
types-requests = "^2.31.0.1"
types-python-dateutil = "^2.8.19.13"

[tool.poetry.dev-dependencies]
ruff = "^0.0.272"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
pydocstyle = "^6.3.0"
pre-commit = "^3.3.2"
nbqa = "^1.7.0"
jupyterlab = "^4.0.2"
jupyterthemes = "^0.20.0"
sqlfluff = "^2.1.1"
shandy-sqlfmt= {extras = ["jinjafmt"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pydocstyle]
ignore = ["D104", "D107", "D212", "D203"]

[tool.sqlfmt]
line_length = 120
exclude=["target/**/*", "dbt_packages/**/*", "notebooks/**/*", "macros/**/*"]

[tool.sqlfluff]
sql_file_exts = [".sql", ".sql.j2", ".dml", ".ddl"]

[tool.sqlfluff.core]
templater = "dbt"
dialect = "bigquery"
exclude_rules = "L036"

[tool.sqlfluff.rules]
max_line_length = 120
capitalisation_policy = "lower"
extended_capitalisation_policy = "lower"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10